# pypkgs_yg

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pypkgs_yg.rst
tests/: test_pypkgs_yg.py
