[tool.poetry]
name = "pypkgs_yg"
version = "0.1.0"
description = "Python package for individual assignment"
authors = ["Yuyan Guo <yuyanguo@student.ubc.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
